--- a/src/c_embed/Makefile
+++ b/src/c_embed/Makefile
@@ -1,10 +1,10 @@
-CC=riscv64-unknown-elf-gcc -nostdlib -Wno-builtin-declaration-mismatch -march=rv32ec -mabi=ilp32e -fpic
+CC=riscv64-unknown-elf-gcc -O2 -g -nostdlib -Wno-builtin-declaration-mismatch -march=rv32ec -mabi=ilp32e -fpic
 AS=riscv64-unknown-elf-as -march=rv32ec
 LD=riscv64-unknown-elf-ld -nostdlib -melf32lriscv -Tred-qemu.ld
 SIZE=riscv64-unknown-elf-size
 OBJDUMP=riscv64-unknown-elf-objdump
 
-OBJS=c_embed startup.o main.o 
+OBJS=c_embed startup.o main.o main.s
 
 all: c_embed
 
@@ -24,4 +24,4 @@ clean:
 
 .PHONY: dump
 dump: c_embed
-	$(OBJDUMP) -d c_embed
+	$(OBJDUMP) -S --source-comment='#' -d c_embed
